# rpb

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  costum.rs  custom.rs  download.rs
src/: all_spinner.rs  bar.rs  color.rs  format.rs  iterator.rs  lib.rs  main.rs  mod.rs  multi_bars.rs  printer.rs  spinner.rs  styles.rs  type_spinner.rs
