[package]
name = "rpb"
version = "0.1.0"
edition = "2021"
authors = ["Drissa KONE"]
description = "A simple implementation of progress bar for rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
int-enum = "0.4.0"
enum-iterator = "1.2.0"