[package]
name = "rpb"
version = "0.1.5"
edition = "2021"
authors = ["disco07"]
description = "A simple implementation of progress bar for rust"
keywords = ["cli", "progress", "progressbar", "pb"]
categories = ["command-line-interface"]
repository = "https://github.com/disco07/rpb"
documentation = "https://docs.rs/rpb"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
int-enum = "0.4.0"
enum-iterator = "1.2.0"
terminal_size = "0.2.1"